fix plugin support

--- a/PKHeX_Hunter_Plugin/PKHeX_Hunter_Plugin.csproj
+++ b/PKHeX_Hunter_Plugin/PKHeX_Hunter_Plugin.csproj
@@ -3,13 +3,13 @@
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <UseWindowsForms>true</UseWindowsForms>
-    <TargetFrameworks>net48</TargetFrameworks>
+    <TargetFrameworks>net48;net6.0-windows</TargetFrameworks>
     <LangVersion>10</LangVersion>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="PKHeX.Core" Version="21.11.27" />
+    <PackageReference Include="PKHeX.Core" Version="22.3.18" />
   </ItemGroup>
 
   <ItemGroup>
