--- a/PKHeX_Hunter_Plugin/PKHeX_Hunter_Plugin.csproj
+++ b/PKHeX_Hunter_Plugin/PKHeX_Hunter_Plugin.csproj
@@ -13,6 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PIDFinder.Lib\PIDFinder.Lib.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
 
